case SVY-1379: Allow Foundsets to be passed into headless clients. Made query builder serializable via json using xml Case: SVY-1379